# boersen_chart

./: Cargo.toml  example_data.csv  prompt_output_script.sh  prompt_output_script_change_folder_02.sh  run.sh
src/: main.rs
src/data/: loader.rs  mod.rs  model.rs
src/indicators/: ma.rs  mod.rs
src/ui/: mod.rs
